tests/data/input/invalid_files/invalidsample.xyz
   37115.2500000  419886.6875000     500.0000000
1	10	100
2 20
3 30 300    
4 40 400 # fourth sample point